--- a/changes.txt
+++ b/changes.txt
@@ -1,2 +1,3 @@
 v0.1, 2016-04-04 -- Initial release.
 v0.1.1, 2016-04-04 -- Attempts to guess whether image file is a URL.
+v0.1.2, 2016-04-05 -- Custom charset can now be passed in. Assumes dark terminal with light text by default.
