--- a/changes.txt
+++ b/changes.txt
@@ -2,3 +2,4 @@ v0.1, 2016-04-04 -- Initial release.
 v0.1.1, 2016-04-04 -- Attempts to guess whether image file is a URL.
 v0.1.2, 2016-04-05 -- Custom charset can now be passed in. Assumes dark terminal with light text by default.
 v0.1.3, 2016-04-19 -- Added image_to_blocks. Created entry_point. Added tests.
+v0.2, 2016-04-19 -- Removed image_to_blocks. Clean up to prepare for PyPI release.
