--- a/changes.txt
+++ b/changes.txt
@@ -5,3 +5,4 @@ v0.1.3, 2016-04-19 -- Added image_to_blocks. Created entry_point. Added tests.
 v0.2, 2016-04-19 -- Removed image_to_blocks. Clean up to prepare for PyPI release.
 v0.2.1, 2016-04-21 -- Bugfix for test cases. Updated license to MPL2.
 v0.3, 2016-04-21 -- Added basic ANSI colour support.
+v0.3.1, 2016-05-17 -- Smarter default output dimensions.
